@@ -135,7 +135,7 @@ Page {
             if ((model_current.getdata(day, "humidity")) != "N/A")
                 condition.append({cond_name: Config.tr("Humidity") + ":",
                          value: model_current.getdata(day, "humidity")+'%'});
-            if ((model_current.getdata(day, "wind_direction")) != "")
+            if ((model_current.getdata(day, "wind_direction")) != "" && (model_current.getdata(day, "wind_direction")) != "N/A")
                 condition.append({cond_name: Config.tr("Wind direction") + ":",
                          value: Config.tr(model_current.getdata(day, "wind_direction"))});
             if ((model_current.getdata(day, "pressure")) != "N/A")
@@ -199,7 +199,7 @@ Page {
             if ((model_day.getdata(day, "humidity")) != "N/A")
                 condition.append({cond_name: Config.tr("Humidity") + ":",
                          value: model_day.getdata(day, "humidity")+'%'});
-            if ((model_day.getdata(day, "wind_direction")) != "")
+            if ((model_day.getdata(day, "wind_direction")) != "" && (model_day.getdata(day, "wind_direction")) != "N/A")
                 condition.append({cond_name: Config.tr("Wind direction") + ":",
                          value: Config.tr(model_day.getdata(day, "wind_direction"))});
             if ((model_day.getdata(day, "pressure")) != "N/A")
@@ -254,7 +254,7 @@ Page {
             if ((model_night.getdata(day, "humidity")) != "N/A")
                 condition.append({cond_name: Config.tr("Humidity") + ":",
                          value: model_night.getdata(day, "humidity")+'%'});
-            if ((model_night.getdata(day, "wind_direction")) != "")
+            if ((model_night.getdata(day, "wind_direction")) != "" && (model_night.getdata(day, "wind_direction")) != "N/A")
                 condition.append({cond_name: Config.tr("Wind direction") + ":",
                          value: Config.tr(model_night.getdata(day, "wind_direction"))});
             if ((model_night.getdata(day, "pressure")) != "N/A")
