@@ -1332,7 +1332,7 @@ parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gcha
                         /* Period after sunrise and before sunset */  
                         /* set sunrise  in localtime */
 
-                        if ((temp_hi[0] != 0 || temp_low[0] !=0) && (strlen(icon_day) > 0 && humidity_day != 0 && strlen(description_day)>0)){
+                        if (temp_hi[0] != 0 || temp_low[0] !=0){
                             fprintf(file_out,"    <period start=\"%li\"", (t_sunrise + 1));
                             fprintf(file_out," end=\"%li\">\n", t_sunset);
                             if (temp_hi[0] != 0 && temp_low[0] != 0){ 
@@ -1344,16 +1344,20 @@ parse_and_write_xml_data(const gchar *station_id, xmlNode *root_node, const gcha
                                 else
                                     fprintf(file_out,"     <temperature>%s</temperature>\n", temp_low); 
                             }
-                            if (wind_speed_day[0] != 0)
-                                fprintf(file_out,"     <wind_speed>%1.f</wind_speed>\n", (double)(atoi(wind_speed_day)) * 1000/3600);
-                            if (wind_direction_day[0] != 0)
-                                fprintf(file_out,"     <wind_direction>%s</wind_direction>\n", wind_direction_day);
+                            if (strlen(icon_day) > 0 && humidity_day != 0 && strlen(description_day)>0){
+                                if (wind_speed_day[0] != 0)
+                                    fprintf(file_out,"     <wind_speed>%1.f</wind_speed>\n", (double)(atoi(wind_speed_day)) * 1000/3600);
+                                if (wind_direction_day[0] != 0)
+                                    fprintf(file_out,"     <wind_direction>%s</wind_direction>\n", wind_direction_day);
 
-                            if (humidity_day[0] != 0)
-                                fprintf(file_out,"     <humidity>%s</humidity>\n", humidity_day);
-                            fprintf(file_out,"     <ppcp>%s</ppcp>\n", ppcp_day);
-                            fprintf(file_out,"     <description>%s</description>\n", description_day);
-                            fprintf(file_out,"     <icon>%s</icon>\n", icon_day);
+                                if (humidity_day[0] != 0)
+                                    fprintf(file_out,"     <humidity>%s</humidity>\n", humidity_day);
+                                fprintf(file_out,"     <ppcp>%s</ppcp>\n", ppcp_day);
+                                fprintf(file_out,"     <description>%s</description>\n", description_day);
+                                fprintf(file_out,"     <icon>%s</icon>\n", icon_day);
+                            }else{
+                                fprintf(file_out,"     <icon>48</icon>\n");
+                            }
                             fprintf(file_out,"    </period>\n");
                         }
                         /* Period after sunset */  
