@@ -1,6 +1,8 @@
 meecast (0.9.2) unstable; urgency=low
 
-  * Nothing 
+  * Fixed "N/A" wind direction
+  * Fixed problem with today data for weather.com source
+  * Fixed problem with n/a icon for Atmos iconset
 
  -- Vlad Vasiliev <vlad@gas.by>  Wed, 16 Apr 2014 22:31:23 +0200
 
